--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@codemirror/lang-javascript": "^6.2.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -35,7 +37,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
+    "framer-motion": "^10.16.16",
     "lucide-react": "^0.303.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^13.4.13",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
