--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 REMOTION_AWS_ACCESS_KEY_ID=""
 REMOTION_AWS_SECRET_ACCESS_KEY=""
-NEXT_PUBLIC_VERCEL_URL= ""
+NEXT_PUBLIC_VERCEL_URL= "https://codeflowsnippet.vercel.app"
