feat:dnd timeline

--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.1",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@remotion/bundler": "^4.0.77",
@@ -32,12 +35,15 @@
     "@uiw/codemirror-extensions-langs": "^4.21.21",
     "@uiw/codemirror-theme-andromeda": "^4.21.21",
     "@uiw/codemirror-theme-dracula": "^4.21.21",
+    "@uiw/codemirror-theme-github": "^4.21.21",
     "@uiw/codemirror-theme-tokyo-night": "^4.21.21",
+    "@uiw/codemirror-theme-vscode": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "framer-motion": "^10.16.16",
+    "geist": "^1.2.0",
     "lucide-react": "^0.303.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^13.4.13",
